<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:orientation="vertical">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="none"
        android:width="300sp"
        android:layout_margin="20sp"
        android:id="@+id/term"
        android:editable="false"
        tools:ignore="Deprecated" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disp"
        android:textSize="20sp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60sp"
        android:rowCount="6"
        android:columnCount="4"
        android:layout_marginStart="5sp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentile"
            android:onClick="percentile"
            android:textColor="@color/buttonText" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square_root"
            android:onClick="square_root"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/square"
            android:onClick="square"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_by_x"
            android:onClick="one_by_x"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/CE"
            android:onClick="CE"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/C"
            android:onClick="C"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/back"
            android:onClick="back"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/division"
            android:onClick="division"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/seven"
            android:onClick="seven"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/eight"
            android:onClick="eight"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/nine"
            android:onClick="nine"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/product"
            android:onClick="product"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/four"
            android:onClick="four"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/five"
            android:onClick="five"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/six"
            android:onClick="six"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/minus"
            android:onClick="minus"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/one"
            android:onClick="one"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/two"
            android:onClick="two"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/three"
            android:onClick="three"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/add"
            android:onClick="add"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/plus_minus"
            android:onClick="plus_minus"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/zero"
            android:onClick="zero"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/dot"
            android:onClick="dot"
            android:textColor="@color/buttonText"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/equal_to"
            android:onClick="equal_to"
            android:textColor="@color/buttonText"/>



    </GridLayout>

    </LinearLayout>


</ScrollView >